fix(Styling): Fixes & Improvements
- Fixed issues with extra space causing unnecessary scroll

--- a/src/pages/Registration/Registration.module.css
+++ b/src/pages/Registration/Registration.module.css
@@ -1,4 +1,3 @@
-.container{
+.container {
     width: 100%;
-    height: 100%;
 }
